<?php
namespace Patterns\Creational\AbstractFactory\KamranAhmed;

interface DoorFittingExpertInterface {
	public function getDescription(): string;
}
