<?php
namespace Patterns\Creational\AbstractFactory\KamranAhmed;

class IronDoor extends DoorsAbstract {
	public function getDescription(): string {
		return 'I am a iron door';
	}
}
