<?php
namespace Patterns\Creational\AbstractFactory\KamranAhmed;

class WoodenDoor extends DoorsAbstract {
	public function getDescription(): string {
		return 'I am a wooden door';
	}
}
